# betterstack-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml
assets/demo/: demo.tape
demo/: demo.tape  log-generator.sh
src/: context.rs  lib.rs  main.rs
src/adapters/config/: mod.rs  schema.rs
src/adapters/http/: connections.rs  heartbeat_groups.rs  heartbeats.rs  incidents.rs  mod.rs  monitor_groups.rs  oncall.rs  pagination.rs  policies.rs  retry.rs  severities.rs  sql.rs  status_pages.rs  telemetry.rs  uptime.rs
src/commands/: auth.rs  heartbeat_groups.rs  heartbeats.rs  incidents.rs  logs.rs  mod.rs  monitor_groups.rs  monitors.rs  oncall.rs  policies.rs  severities.rs  sources.rs  status.rs  status_pages.rs  upgrade.rs
src/output/: color.rs  csv.rs  fmt.rs  json.rs  mod.rs  table.rs
src/ports/: config.rs  uptime.rs
src/query/: mod.rs
src/types/: common.rs  heartbeat.rs  heartbeat_group.rs  incident.rs  mod.rs  monitor.rs  monitor_group.rs  oncall.rs  policy.rs  severity.rs  source.rs  status_page.rs
tests/: heartbeat_groups_test.rs  heartbeats_test.rs  monitor_groups_test.rs  monitors_test.rs  oncall_test.rs  output_test.rs  policies_test.rs  severities_test.rs  status_pages_test.rs
tests/common/: mod.rs
tests/common/fixtures/: heartbeat_create.json  heartbeat_get.json  heartbeat_group_get.json  heartbeat_groups_list.json  heartbeats_list.json  monitor_get.json  monitor_group_get.json  monitor_groups_list.json  (+14 more)
