[package]
name = "bs-cli"
version = "0.1.0"
edition = "2024"
description = "Fast, AI-friendly CLI for Better Stack"
license = "MIT"
repository = "https://github.com/sounak98/betterstack-cli"

[[bin]]
name = "bs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "1.0"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
